Resolve response object issues