@@ -4,14 +4,12 @@ import com.indexpay.transfer.service.dto.BankDto;
 import com.indexpay.transfer.service.dto.PaystackBank;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class DtoTransformer {
 
+    private DtoTransformer(){}
+
     public static List<BankDto> transformToBankDto(List<PaystackBank> payStackBanks) {
-        return payStackBanks.stream().map(paystackBank -> {
-            return BankDto.builder().bankName(paystackBank.getName()).code(paystackBank.getCode())
-                    .longCode(paystackBank.getLongcode()).build();
-        }).collect(Collectors.toList());
+        return payStackBanks.stream().map(paystackBank -> new BankDto(paystackBank.getCode(), paystackBank.getName(), paystackBank.getLongcode())).toList();
     }
 }
